refactor(backend): eliminar envio de push duplicado y usar logger
NotificationService.enviarNotificacionPush() duplicaba exactamente la
logica de FcmService.sendPushNotification() (mismo builder de mensaje,
mismo try/catch), pero nunca era invocado desde ningun controlador;
NotificationService ya delega en FcmService dentro de create(). Se
retira el metodo muerto y sus imports.

Tambien reemplaza System.out/System.err.println por el logger slf4j del
proyecto en FcmService, y simplifica en NotificationService.create() la
conversion Integer -> Long -> int -> Integer redundante al buscar al
usuario destino.